--- a/react-task/package.json
+++ b/react-task/package.json
@@ -20,8 +20,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "jest",
+    "eject": "react-scripts eject",
+    "prepare": "husky install",
+    "test:watch": "npm test -- --watch"
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +43,12 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/"
+  "proxy": "http://localhost:5000/",
+  "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "babel-jest": "^27.5.1",
+    "husky": "^7.0.0",
+    "jest": "^27.5.1",
+    "prettier": "2.6.0"
+  }
 }
