--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "/server/node_modules",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prepare": "husky install"
   },
   "repository": {
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Danilamaimeskul/my-trainee#readme",
   "devDependencies": {
     "husky": "^7.0.0",
+    "jest": "^27.5.1",
     "prettier": "2.6.0",
     "pretty-quick": "^3.1.3"
   }
