--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "jest": "^27.5.1",
     "prettier": "2.6.0",
     "pretty-quick": "^3.1.3"
+  },
+  "hooks": {
+    "pre-commit": "npx pretty-quick --staged",
+    "pre-push": "jest"
   }
 }
