--- a/react-task/package.json
+++ b/react-task/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -22,7 +23,6 @@
     "build": "react-scripts build",
     "test": "jest",
     "eject": "react-scripts eject",
-    "prepare": "husky install",
     "test:watch": "npm test -- --watch"
   },
   "eslintConfig": {
@@ -47,7 +47,6 @@
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
     "babel-jest": "^27.5.1",
-    "husky": "^7.0.0",
     "jest": "^27.5.1",
     "prettier": "2.6.0"
   }
