--- a/react-task/package.json
+++ b/react-task/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "dotenv": "^16.0.0",
+    "jest": "^27.5.1",
     "lodash.debounce": "^4.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -46,9 +47,20 @@
   },
   "proxy": "http://localhost:5000/",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.17.7",
     "@babel/preset-env": "^7.16.11",
     "babel-jest": "^27.5.1",
-    "jest": "^27.5.1",
     "prettier": "2.6.0"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "bower_components",
+      "src"
+    ]
   }
 }
